[project]
name = "wled"
version = "0.0.0"
description = "Asynchronous Python client for WLED."
authors = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
maintainers = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
license = "MIT"
requires-python = ">=3.11,<4.0"
readme = "README.md"
keywords = [
  "api",
  "async",
  "client",
  "home-assistant",
  "led",
  "wled",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [{ include = "wled", from = "src" }]
dependencies = [
  'aiohttp (>=3.0.0)',
  'awesomeversion (>=22.1.0)',
  'backoff (>=2.2.0)',
  'cachetools (>=4.0.0)',
  'mashumaro (>=3.13,<4.0.0)',
  'orjson (>=3.9.8)',
  'yarl (>=1.6.0)',
]

[project.optional-dependencies]
cli = ["typer[all]>=0.24.0,<1.0.0", "zeroconf[all]>=0.148.0,<1.0.0"]

[project.scripts]
wled = "wled.cli:cli"

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/frenck/python-wled"
repository = "https://github.com/frenck/python-wled"
documentation = "https://github.com/frenck/python-wled"
"Bug Tracker" = "https://github.com/frenck/python-wled/issues"
Changelog = "https://github.com/frenck/python-wled/releases"

[tool.poetry.group.dev.dependencies]
aioresponses = "0.7.8"
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = { version = "7.13.5", extras = ["toml"] }
pre-commit-hooks = "6.0.0"
prek = "0.3.9"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
ruff = "0.15.10"
safety = "3.7.0"
syrupy = "5.1.0"
ty = "0.0.31"
typer = "0.24.1"
yamllint = "1.38.0"
zizmor = "1.24.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["wled"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ty.environment]
python-version = "3.11"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T", "wv"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["too-few-public-methods", "duplicate-code", "format", "unsubscriptable-object"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pylint.TYPECHECK]
ignored-modules = ["orjson", "zeroconf", "zeroconf.asyncio"]

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "FBT001", # Boolean positional args are idiomatic in parametrized tests
  "FBT002", # Boolean defaults are idiomatic in parametrized tests
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["wled"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["mashumaro.mixins.orjson.DataClassORJSONMixin"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.codespell]
ignore-words-list = "abl"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
